# anidetector

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
config/: settings.py  url.py  urls.py  wsgi.py
detections/: admin.py  apps.py  inference.py  models.py  serializers.py  template_views.py  urls.py  views.py  visualize.py
detections/management/commands/: ingest.py
detections/migrations/: 0001_initial.py
scripts/: try_models.py
templates/detections/: results.html
